# simple-python-app

./: .gitignore  README.md  load.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5fc0468b0024_adds_record_model.py
docker/: Dockerfile
kubernetes/base/: kustomization.yaml
kubernetes/base/manifests/: minimal-postgres-manifest.yaml
kubernetes/base/postgres/: configmap.yaml  deployment.yaml  service.yaml
kubernetes/base/redis/: deployment.yaml  service.yaml
kubernetes/overlays/postgres-op/: readme.md
kubernetes/overlays/postgres-op/load-data/: job.yaml  kustomization.yaml
kubernetes/overlays/postgres-op/shared/: configmap.yaml  secrets.yaml
kubernetes/overlays/postgres-op/simple-app/: kustomization.yaml
kubernetes/overlays/staging/: kustomization.yaml
kubernetes/overlays/staging/simple-app/: configmap.yaml  deployment.yaml  load-data-job.yaml  service.yaml
simple_web_app/: app.py  database.py  models.py
simple_web_app/templates/: records.html
tests/: test_simple_web_app.py
