[tool.poetry]
name = "simple-web-app"
version = "0.1.0"
description = ""
authors = ["brianmehrman <brian.mehrman@centro.net>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.0"
SQLAlchemy = "^1.4.15"
pylint = "^2.8.2"
requests = "^2.25.1"
PyYAML = "^5.4.1"
psycopg2-binary = "^2.8.6"
Flask-Cors = "^3.0.10"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
